Fix: Corregir URL rota en detalle de minuta (project_detail → project_overview)

--- a/core/templates/core/project_minute_detail.html
+++ b/core/templates/core/project_minute_detail.html
@@ -188,7 +188,7 @@
                     <ul class="list-unstyled mb-0">
                         <li class="mb-3">
                             <small class="text-muted d-block">{% trans "Project" %}</small>
-                            <a href="{% url 'project_detail' minute.project.id %}">{{ minute.project.name }}</a>
+                            <a href="{% url 'project_overview' minute.project.id %}">{{ minute.project.name }}</a>
                         </li>
                         <li class="mb-3">
                             <small class="text-muted d-block">{% trans "Event Type" %}</small>
