--- a/core/templates/core/changeorder_detail.html
+++ b/core/templates/core/changeorder_detail.html
@@ -438,6 +438,18 @@
         <a href="{% url 'changeorder_edit' changeorder.id %}" class="btn btn-primary">
             <i class="bi bi-pencil"></i> Editar
         </a>
+        <!-- PDF Download -->
+        <div class="btn-group">
+            <a href="{% url 'changeorder_pdf_view' changeorder.id %}" target="_blank" class="btn btn-outline-danger">
+                <i class="bi bi-file-pdf"></i> Ver PDF
+            </a>
+            <button type="button" class="btn btn-outline-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="visually-hidden">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{% url 'changeorder_pdf_download' changeorder.id %}"><i class="bi bi-download"></i> Descargar PDF</a></li>
+            </ul>
+        </div>
         {% if changeorder.status == 'approved' %}
         <button class="btn btn-success" onclick="sendToClient({{ changeorder.id }})">
             <i class="bi bi-send"></i> Enviar al Cliente
